# SaiDownloader

./: .gitignore  Cargo.toml
example/: header.txt  iter.toml  num.toml  toc.toml
modules/cli/: Cargo.toml
modules/cli/src/: command.rs  lib.rs
modules/ebook/: Cargo.toml
modules/ebook/src/: dom.rs  lib.rs
modules/helper/: Cargo.toml
modules/helper/src/: file.rs  http.rs  lib.rs
modules/hls/: Cargo.toml
modules/hls/src/: lib.rs  test.rs
modules/saidl-helper/src/: lib.rs
src/: main.rs
