[package]
name = "saidl"
version = "0.0.1"
edition = "2021"

[workspace]
members = [ "modules/*" ]

[dependencies]

# Local dependencies
saidl-helper = { path = "modules/helper" }
saidl-hls = { path = "modules/hls" }
saidl-cli = { path = "modules/cli" }
tokio = { version = "1.23.0", features = ["full"] }
