[package]
name = "saidl"
version = "0.0.1"
edition = "2021"

[workspace]
members = [ "modules/*" ]

[patch.crates-io]
hyper = { git = "https://github.com/4JX/hyper.git", branch = "v0.14.18-patched" }
h2 = { git = "https://github.com/4JX/h2.git", branch = "imp" }

[dependencies]

# Local dependencies
saidl-helper = { path = "modules/helper" }
saidl-hls = { path = "modules/hls" }
saidl-cli = { path = "modules/cli" }
tokio = { version = "1.23.0", features = ["full"] }
