[package]
name = "saidl-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
bytes = { version = "1.2.1" }
reqwest = { version = "0.11.13", features = ["native-tls-alpn"] }
