[package]
name = "saidl-hls"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
bytes = { version = "1.2.1" }
#av = { git = "https://github.com/rust-av/rust-av", rev = "a4916de76e36fdd84cf7fce78533ead53a2bfe27" }
#ffmpeg-next = { version = "5.1.1" }

# Local dependencies
saidl-helper = { path = "../helper" }
