[package]
name = "saidl-hls"
version = "0.1.0"
edition = "2021"

[dependencies]
#reqwest = { version = "0.11.13", features = ["native-tls-alpn", "json"] }
reqwest-impersonate = { git = "https://github.com/4JX/reqwest-impersonate.git", rev = "5217922e7f2c2f48418ad2fe6ac1377c7319ca03", default-features = false }

bytes = { version = "1.2.1" }
#av = { git = "https://github.com/rust-av/rust-av", rev = "a4916de76e36fdd84cf7fce78533ead53a2bfe27" }
#ffmpeg-next = { version = "5.1.1" }

# Local dependencies
saidl-helper = { path = "../helper" }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }